# fraud-agent-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt
app/: __init__.py  config.py  main.py  rate_limit.py
app/agents/: __init__.py  graph.py  pattern_detector.py  report_generator.py  risk_scorer.py  state.py  transaction_analyzer.py
app/models/: __init__.py  request.py  response.py
app/prompts/: __init__.py  analyzer_prompt.py  detector_prompt.py  reporter_prompt.py  scorer_prompt.py
app/routers/: __init__.py  agents.py  health.py  monitor.py
app/tools/: __init__.py  pattern_database.py  risk_calculator.py  sar_template.py  transaction_lookup.py
dashboard/: Dockerfile  app.py  requirements.lock.txt  requirements.txt
dashboard/components/: agent_trace_viewer.py  report_viewer.py  risk_dashboard.py
data/: fraud_patterns.json  sample_transactions.json
demo/: app.py
demo/.streamlit/: secrets.toml.example
eval/: evaluate_agents.py  test_scenarios.json
eval/results/: metrics.json
scripts/: deploy_cloudrun.sh  deploy_demo_cloudrun.sh
tests/: conftest.py  test_agents.py  test_graph.py  test_tools.py
