[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-fraud-monitor"
version = "0.1.0"
description = "LangGraph multi-agent fraud monitoring service"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ahmad Whafa Azka Al Azkiyai" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "langchain>=0.3.0",
  "langchain-openai>=0.2",
  "langchain-anthropic>=0.2",
  "langgraph>=1.0.10",
  "langsmith>=0.1",
  "ragas>=0.1.10,<0.2.0",
  "streamlit>=1.30",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "requests>=2.33.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing -v"
